Refactor numerous RepositoryITest buildTestData methods to include required fields Close #99